--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ serde = "1"
 serde_derive = "1"
 serde_cbor = "0.10"
 bitcoin_hashes={version="0.3", features=["serde"]}
-bitcoin={version="0.18", features=["serde"]}
+bitcoin={version="0.18", features=["serde", "bitcoinconsensus"]}
 secp256k1={version="0.12", features=["rand", "serde"]}
 siphasher="0.3"
+rand = "0.7"
 
 [dev-dependencies]
 hex="0.3"
