--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_cbor = "0.10"
 bitcoin_hashes={version="0.3", features=["serde"]}
 bitcoin={version="0.18", features=["serde", "bitcoinconsensus"]}
 secp256k1={version="0.12", features=["rand", "serde"]}
+bitcoin-wallet={path="../rust-wallet"}
 siphasher="0.3"
 rand = "0.7"
 
