--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
 edition = "2018"
 
+[[bin]]
+name="biadnet"
+path="src/biadnet/main.rs"
+
 [dependencies]
 snap = "0.2"
 byteorder = "1"
@@ -14,8 +18,12 @@ bitcoin_hashes={version="0.3", features=["serde"]}
 bitcoin={version="0.18", features=["serde", "bitcoinconsensus"]}
 secp256k1={version="0.12", features=["rand", "serde"]}
 bitcoin-wallet={path="../rust-wallet"}
+murmel={path="../murmel"}
 siphasher="0.3"
 rand = "0.7"
+log="0.4"
+simple_logger = "0.5"
+futures={ git= "https://github.com/tamasblummer/futures-rs.git", tag = "0.2.1" }
 
 [dev-dependencies]
 hex="0.3"
