--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ byteorder = "1"
 serde = "1"
 serde_derive = "1"
 serde_cbor = "0.10"
+serde_json = "1.0"
 bitcoin_hashes={version="0.3", features=["serde"]}
 bitcoin={version="0.18", features=["serde", "bitcoinconsensus"]}
 secp256k1={version="0.12", features=["rand", "serde"]}
