use clap for options processing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ simple_logger = "0.5"
 futures={ git= "https://github.com/tamasblummer/futures-rs.git", tag = "0.2.1" }
 rusqlite={version="0.20", features=["bundled"]}
 jsonrpc-http-server = "13.0"
+clap = "2.33"
 
 [dev-dependencies]
 hex="0.3"
