--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,7 @@ rusqlite={version="0.20", features=["bundled"]}
 jsonrpc-http-server = "13.0"
 clap = "2.33"
 toml="0.5"
+base64="0.10"
+
+[dev-dependencies]
 hex="0.3"
