--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ serde_derive = "1"
 serde_cbor = "0.10"
 serde_json = "1.0"
 bitcoin_hashes={version="0.7", features=["serde"]}
-bitcoin={ git= "https://github.com/tamasblummer/rust-bitcoin.git", branch = "patches", features=["serde", "bitcoinconsensus"]}
+bitcoin={ git= "https://github.com/defiads/rust-bitcoin.git", branch = "patches", features=["serde", "bitcoinconsensus"]}
 secp256k1={version="0.15", features=["rand", "serde"]}
-bitcoin-wallet={git="https://github.com/tamasblummer/rust-wallet.git", branch = "master"}
-murmel={git="https://github.com/tamasblummer/murmel.git", branch = "master"}
+bitcoin-wallet={git="https://github.com/defiads/rust-wallet.git", branch = "patches"}
+murmel={git="https://github.com/defiads/murmel.git", branch = "patches"}
 siphasher="0.3"
 rand = "0.7"
 rand_distr = "0.2"
