--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "defiads"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
 edition = "2018"
 
 [[bin]]
 name="defiads"
 path="src/defiads/main.rs"
+
+[features]
+bitcoinconsensus=["bitcoin/bitcoinconsensus"]
 
 [dependencies]
 snap = "0.2"
@@ -16,10 +19,10 @@ serde_derive = "1"
 serde_cbor = "0.10"
 serde_json = "1.0"
 bitcoin_hashes={version="0.7", features=["serde"]}
-bitcoin={ git= "https://github.com/defiads/rust-bitcoin.git", branch = "patches", features=["serde", "bitcoinconsensus"]}
-secp256k1={version="0.15", features=["rand", "serde"]}
-bitcoin-wallet={git="https://github.com/defiads/rust-wallet.git", branch = "patches"}
-murmel={git="https://github.com/defiads/murmel.git", branch = "patches"}
+bitcoin={version= "0.21", features=["serde"]}
+secp256k1={version="0.15", features=["serde"]}
+bitcoin-wallet="1.0"
+murmel="0.2"
 siphasher="0.3"
 rand = "0.7"
 rand_distr = "0.2"
